# fastapi-github-actions-test

./: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: develop.yaml  develop.yml
